generated/checkers/refine/KN-Buffer-Overflow-c6087b82-8/build_logs/syntax-repair-refine-1-0/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:52:8: error: ‘void {anonymous}::SAGenTestChecker::checkPreCall(const clang::ento::CallEvent&, clang::ento::CheckerContext&) const’ marked ‘override’, but does not override
   52 |   void checkPreCall(const CallEvent &Call, CheckerContext &C) const override;
      |        ^~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:53:8: error: ‘void {anonymous}::SAGenTestChecker::checkBind(clang::ento::SVal, clang::ento::SVal, const clang::Stmt*, clang::ento::CheckerContext&) const’ marked ‘override’, but does not override
   53 |   void checkBind(SVal Loc, SVal Val, const Stmt *S, CheckerContext &C) const override;
      |        ^~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:37:6: warning: ‘bool {anonymous}::EvaluateExprToInt(llvm::APSInt&, const clang::Expr*, clang::ento::CheckerContext&)’ declared ‘static’ but never defined [-Wunused-function]
   37 | bool EvaluateExprToInt(llvm::APSInt &EvalRes, const Expr *expr, CheckerContext &C);
      |      ^~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:38:21: warning: ‘const llvm::APSInt* {anonymous}::inferSymbolMaxVal(clang::ento::SymbolRef, clang::ento::CheckerContext&)’ declared ‘static’ but never defined [-Wunused-function]
   38 | const llvm::APSInt *inferSymbolMaxVal(SymbolRef Sym, CheckerContext &C);
      |                     ^~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:39:6: warning: ‘bool {anonymous}::getArraySizeFromExpr(llvm::APInt&, const clang::Expr*)’ declared ‘static’ but never defined [-Wunused-function]
   39 | bool getArraySizeFromExpr(llvm::APInt &ArraySize, const Expr *E);
      |      ^~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:40:6: warning: ‘bool {anonymous}::getStringSize(llvm::APInt&, const clang::Expr*)’ declared ‘static’ but never defined [-Wunused-function]
   40 | bool getStringSize(llvm::APInt &StringSize, const Expr *E);
      |      ^~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:41:18: warning: ‘const clang::ento::MemRegion* {anonymous}::getMemRegionFromExpr(const clang::Expr*, clang::ento::CheckerContext&)’ declared ‘static’ but never defined [-Wunused-function]
   41 | const MemRegion* getMemRegionFromExpr(const Expr* E, CheckerContext &C);
      |                  ^~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:42:6: warning: ‘bool {anonymous}::functionKnownToDeref(const clang::ento::CallEvent&, llvm::SmallVectorImpl<unsigned int>&)’ declared ‘static’ but never defined [-Wunused-function]
   42 | bool functionKnownToDeref(const CallEvent &Call, llvm::SmallVectorImpl<unsigned> &DerefParams);
      |      ^~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:43:6: warning: ‘bool {anonymous}::ExprHasName(const clang::Expr*, llvm::StringRef, clang::ento::CheckerContext&)’ declared ‘static’ but never defined [-Wunused-function]
   43 | bool ExprHasName(const Expr *E, StringRef Name, CheckerContext &C);
      |      ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:36:10: warning: ‘const T* {anonymous}::findSpecificTypeInChildren(const clang::Stmt*) [with T = clang::UnaryExprOrTypeTraitExpr]’ used but never defined
   36 | const T* findSpecificTypeInChildren(const Stmt *S);
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:41:18: warning: ‘const clang::ento::MemRegion* {anonymous}::getMemRegionFromExpr(const clang::Expr*, clang::ento::CheckerContext&)’ used but never defined
   41 | const MemRegion* getMemRegionFromExpr(const Expr* E, CheckerContext &C);
      |                  ^~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:39:6: warning: ‘bool {anonymous}::getArraySizeFromExpr(llvm::APInt&, const clang::Expr*)’ used but never defined
   39 | bool getArraySizeFromExpr(llvm::APInt &ArraySize, const Expr *E);
      |      ^~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:43:6: warning: ‘bool {anonymous}::ExprHasName(const clang::Expr*, llvm::StringRef, clang::ento::CheckerContext&)’ used but never defined
   43 | bool ExprHasName(const Expr *E, StringRef Name, CheckerContext &C);
      |      ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:38:21: warning: ‘const llvm::APSInt* {anonymous}::inferSymbolMaxVal(clang::ento::SymbolRef, clang::ento::CheckerContext&)’ used but never defined
   38 | const llvm::APSInt *inferSymbolMaxVal(SymbolRef Sym, CheckerContext &C);
      |                     ^~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:37:6: warning: ‘bool {anonymous}::EvaluateExprToInt(llvm::APSInt&, const clang::Expr*, clang::ento::CheckerContext&)’ used but never defined
   37 | bool EvaluateExprToInt(llvm::APSInt &EvalRes, const Expr *expr, CheckerContext &C);
      |      ^~~~~~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:29772: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:29779: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
